--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "private": true,
   "main": "index.js",
   "scripts": {
-    "build": "./node_modules/.bin/babel --presets es2015 src -d lib",
+    "test": "karma start",
     "start": "node server.js"
+
   },
   "author": "Justin Razon",
   "license": "MIT",
@@ -27,7 +28,15 @@
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
     "css-loader": "^0.26.1",
+    "expect": "^1.20.2",
     "foundation-sites": "^6.3.0-rc1",
+    "karma": "^1.3.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-mocha": "^1.3.0",
+    "karma-mocha-reporter": "^2.2.1",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^1.8.0",
+    "mocha": "^3.2.0",
     "node-sass": "^3.13.0",
     "sass-loader": "^4.0.2",
     "script-loader": "^0.7.0",
