--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "boilerplate",
+  "name": "react-timer",
   "version": "1.0.0",
   "description": "Simple React App",
   "private": true,
@@ -27,6 +27,10 @@
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
     "css-loader": "^0.26.1",
+    "enzyme": "^2.6.0",
+    "eslint": "^3.12.2",
+    "eslint-config-google": "^0.7.1",
+    "eslint-plugin-promise": "^3.4.0",
     "expect": "^1.20.2",
     "foundation-sites": "^6.3.0-rc1",
     "karma": "^1.3.0",
